--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
   height: 90vh;
   display: flex;
   justify-content: left;
-  width: 600px;
+  width: 40%;
   margin-left: auto;
   margin-right: auto;
   align-items: center;
@@ -46,7 +46,7 @@
 .body-rest {
   display: flex;
   justify-content: left;
-  width: 600px;
+  width: 40%;
   margin-left: auto;
   margin-right: auto;
 }
