--- a/src/App.css
+++ b/src/App.css
@@ -224,7 +224,7 @@
 
 .fadeIn {
   -webkit-animation: fadeIn;
-  animation-name: fadeIn;
+  animation: fadeIn;
   -webkit-animation-duration: 2s;
   animation-duration: 2s;
 }
